gccida/g0/apply_delayed_renames
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/apply_delayed_renames/src/ssa.c:1244:29: error: use of undeclared identifier 'machine_mode'
r->new_reg = gen_reg_rtx( ( machine_mode)*( ( unsigned __int8 *)r->old_reg + 2)); 
                            ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/apply_delayed_renames/src/obj/ssa.o] Error 1
